--- a/.gitattributes
+++ b/.gitattributes
@@ -3,10 +3,16 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 .editorconfig export-ignore
+composer.json export-ignore
 composer.lock export-ignore
+package.json export-ignore
+package-lock.json export-ignore
 phpcs.xml export-ignore
 phpcs.xml.dist export-ignore
 .phpcs.xml export-ignore
+.eslintrc.json export-ignore
+.prettierrc export-ignore
+*.md export-ignore
 /.github export-ignore
 /bin export-ignore
 /.cache export-ignore
